--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,74 +1,75 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Registration Form</title>
-<style>
-.a {
-	padding-top: 150px;
-	padding-left: 450px;
-	;
-}
-
-.b {
-	color: red; text-decoration : blink;
-	padding-top: 50px;
-	padding-left: 450px;
-	text-decoration: blink;
-}
-
-.c {
-	padding-top: 50px;
-	padding-left: 450px;
-	;
-}
-</style>
+<title>Registration and Login System</title>
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+	crossorigin="anonymous">
 </head>
-<body bgcolor="#87CEEB">
-	<div class="a">
-		<p>Login Page (please enter your username and password)</p>
-		<!-- we use *  to POST data and  $ to GET data i.e. *{varName} & i${varName}  -->
-		<form action="#" th:action="@{/login}" th:object="${user}"
-			method="post">
+<body>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<div class="container-fluid">
+			<a class="navbar-brand" th:href="@{/homepage}">Registration and
+				Login System</a>
+			<button class="navbar-toggler" type="button"
+				data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item"><a class="nav-link active"
+						aria-current="page" th:href="@{/registration}">Register Here</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	<br />
+	<br />
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 offset-md-3">
 
-			<p>
-				User Name : <input type="text" th:field="*{userName}" />
-			</p>
-			<p>
-				Password : <input type="password" th:field="*{password}" />
-			</p>
-			<p>
-				<input type="submit" value="Login" />
-			</p>
-			
-			<div class="b">
+				<div th:if="${param.error}">
+					<div class="alert alert-danger">Invalid Email or Password</div>
+				</div>
+				<div th:if="${param.logout}">
+					<div class="alert alert-success">You have been logged out.</div>
+				</div>
 
-		<h3>
+				<div class="card">
+					<div class="card-header">
+						<h2 class="text-center">Login Form</h2>
+					</div>
+					<div class="card-body">
+						<form method="post" role="form" th:action="@{/login}"
+							class="form-horizontal">
+							<div class="form-group mb-3">
+								<label class="control-label"> UserName</label> <input
+									type="text" id="userName" name="userName" class="form-control"
+									placeholder="Enter user name" />
+							</div>
 
-			<p th:text="${errormsg}" />
-
-		</h3>
+							<div class="form-group mb-3">
+								<label class="control-label"> Password</label> <input
+									type="password" id="password" name="password"
+									class="form-control" placeholder="Enter password" />
+							</div>
+							<div class="form-group mb-3">
+								<button type="submit" class="btn btn-primary">Login</button>
+								&nbsp &nbsp &nbsp <span> Not registered ? &nbsp &nbsp
+									&nbsp <a th:href="@{/registration}">Register/Signup here</a>
+								</span>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
-	
-	
-		</form>
-
-	</div>
-	<div class="c">
-		<form action="#" th:action="@{/login}" th:object="${user}"
-			th:method="post">
-
-			<p>
-				<input type="submit" value="Reset" />
-			</p>
-
-		</form>
-	</div>
-
-	
-
-
-
-
 </body>
 </html>
