--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,38 +1,105 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Add Role Form</title>
+<title>Registration and Login System</title>
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+	crossorigin="anonymous">
 </head>
 <body>
-	<p>Add User Details</p>
-
-	<form action="#" th:action="@{/saveuser}" th:object="${user}"
-		method="post">
-		<p>
-			User Name : <input type="text" th:field="*{userName}" />
-		</p>
-		<p>
-			Password : <input type="password" th:field="*{password}" />
-		</p>
-		<div th:object="${userdetails}" >
-		<p>
-			First Name : <input type="text" th:field="*{firstName}" />
-		</p>
-		<p>
-			Last Name : <input type="text" th:field="*{lastName}" />
-		</p>
-		<p>
-			Email : <input type="text" th:field="*{email}" />
-		</p>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<div class="container-fluid">
+			<a class="navbar-brand" th:href="@{/homepage}">Registration and Login
+				System</a>
+			<button class="navbar-toggler" type="button"
+				data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item"><a class="nav-link active"
+						aria-current="page" th:href="@{/loginform}">Login</a></li>
+				</ul>
+			</div>
 		</div>
+	</nav>
+	<br />
+	<br />
+	<br />
+	<div class="container">
+		<div class="row col-md-8 offset-md-2">
+			<div class="card">
+				<div class="card-header">
+					<h2 class="text-center">Registration Form</h2>
+				</div>
+				<div th:if="${param.success}">
+					<div class="alert alert-info">You have successfully
+						registered on our app!</div>
+				</div>
+				<div class="card-body">
+					<form method="post" role="form" th:action="@{saveuser}"
+						th:object="${user}">
+						<div class="form-group mb-3">
+							<label class="form-label">Username</label> <input
+								class="form-control" id="firstName" name="userName"
+								placeholder="Enter  Username" th:field="*{userName}"
+								type="text" />
+							<p th:errors="*{userName}" class="text-danger"
+								th:if="${#fields.hasErrors('userName')}"></p>
+						</div>
 
-		<p>
-			<input type="submit" value="submit" />
-		</p>
-	</form>
-	
-	<p th:text="${userData}"/>
+						<div class="form-group mb-3">
+							<label class="form-label">Password</label> <input
+								class="form-control" id="password" name="password"
+								placeholder="Enter Password" th:field="*{password}" type="password" />
+							<p th:errors="*{password}" class="text-danger"
+								th:if="${#fields.hasErrors('password')}"></p>
+						</div>
+						<div th:object="${userdetails}">
+						
+						<div class="form-group mb-3">
+							<label class="form-label">First Name</label> <input
+								class="form-control" id="firstName" name="firstName"
+								placeholder="Enter First Name" th:field="*{firstName}"
+								type="firstName" />
+							<p th:errors="*{firstName}" class="text-danger"
+								th:if="${#fields.hasErrors('firstName')}"></p>
+								</div>
+								
+								<div class="form-group mb-3">
+							<label class="form-label">Last Name</label> <input
+								class="form-control" id="lastName" name="lastName"
+								placeholder="Enter Last Name" th:field="*{lastName}"
+								type="lastName" />
+							<p th:errors="*{lastName}" class="text-danger"
+								th:if="${#fields.hasErrors('lastName')}"></p>
+								</div>
 
+						<div class="form-group mb-3">
+							<label class="form-label">Email</label> <input
+								class="form-control" id="email" name="email"
+								placeholder="Enter email address" th:field="*{email}"
+								type="email" />
+							<p th:errors="*{email}" class="text-danger"
+								th:if="${#fields.hasErrors('email')}"></p>
+						</div>
+
+						
+						</div>
+						<div class="form-group">
+							<button class="btn btn-primary" type="submit">Register</button>
+							<span>Already registered? <a th:href="@{/login}">Login
+									here</a></span>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
